@@ -1,6 +1,6 @@
 Package: Devore5
-Version: 0.2-1
-Date: 2000/04/17
+Version: 0.3-2
+Date: 2000/05/04
 Title: Data sets from Devore's "Prob and Stat for Eng (5th ed)"
 Author: Original by Jay L. Devore, 
   modifications by Douglas Bates <bates@stat.wisc.edu> 
