@@ -1,3 +1,0 @@
-### $Id: null.R,v 1.1 2000/01/26 23:38:47 bates Exp $
-
-## null file to satisfy package creation mechanism
