@@ -1,4 +1,4 @@
-x1	x2	x1x2	28-day.compt.str..(Mpa)	Absorbability.(%)
+x1	x2	x1x2	strength absorbability
 21	.65	13.65	33.55	8.42
 21	.55	11.55	47.55	6.26
 7	.65	4.55	35	6.74
@@ -6,5 +6,5 @@ x1	x2	x1x2	28-day.compt.str..(Mpa)	Absorbability.(%)
 28	.6	16.8	40.9	7.28
 0	.6	0	39.1	6.9
 14	.7	9.8	31.55	10.8
-14	.5	7	31.12	5.63
-14	.6	8.4	47.05	7.43
+14	.5	7	48.	5.63
+14	.6	8.4	42.3	7.43
